Make text appear again + fix border being clipped
For some reason, this creates a problem with the borders not being clipped
properly, also transparent borders are a problem. Text isn't yet displaced,
doesn't appear in conjunction with other divs.

--- a/examples/xml/xml.css
+++ b/examples/xml/xml.css
@@ -7,14 +7,16 @@ body {
     width: 100px;
     height: 100px;
     background: linear-gradient(503deg, red, blue);
+    border-radius: 10px;
 }
 
 #green {
-    position: static;
     width: 50%;
     height: 40px;
     bottom: 10%;
     background: green;
-    border: 4px solid salmon;
+    border: 4px solid rgba(0, 0, 0, 0.5);
     border-radius: 10px;
+    box-shadow: 0px 0px 40px black;
+    box-sizing: border-box;
 }
